--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.4.1",
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-screens": "^3.1.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.0",
+    "react-navigator": "0.0.0-0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
