--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.0",
-    "react-navigator": "0.0.0-0"
+    "react-navigator": "0.0.0-0",
+    "react-stack-navigation": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
